--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
   cookie_jar: ^4.0.8
   dio: ^5.9.0
   dio_cookie_manager: ^3.3.0
+  flutter_secure_storage: ^9.2.2
   path_provider: ^2.1.3
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
