--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,10 @@ dependencies:
   dio: ^5.9.0
   dio_cookie_manager: ^3.3.0
   flutter_secure_storage: ^9.2.2
+  flutter_local_notifications: ^17.2.0
   path_provider: ^2.1.3
   shared_preferences: ^2.2.2
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
